[project]
name = "qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.25.1",
  "mlx-lm>=0.27.1",
  "openai-harmony>=0.0.4",
  "transformers>=4.55.0",
  "watchdog>=6.0.0",
  "xmltodict>=0.14.2",
]

[tool.pyright]
reportUnusedCallResult = false
reportAny = false
